@@ -1,4 +1,4 @@
-dnl $Id: version.ac 69711 2024-02-05 17:23:27Z karl $
+dnl $Id: version.ac 70630 2024-03-13 22:40:16Z karl $
 dnl   Copyright 2016-2024 Karl Berry <tex-live@tug.org>
 dnl   Copyright 2011-2015 Peter Breitenlohner <tex-live@tug.org>
 dnl
@@ -23,4 +23,4 @@ dnl   releases.
 dnl --------------------------------------------------------
 dnl
 dnl This file is m4-included from configure.ac.
-m4_define([kpse_version], [6.4.0])
+m4_define([kpse_version], [6.4.0/dev])
