@@ -1,4 +1,4 @@
-dnl $Id: version.ac 69798 2024-02-11 08:19:52Z takuji $
+dnl $Id: version.ac 70630 2024-03-13 22:40:16Z karl $
 dnl   Copyright 2022-2024 Japanese TeX Development Community <issue@texjp.org>
 dnl   Copyright 2016-2022 Karl Berry <tex-live@tug.org>
 dnl   Copyright 2011-2015 Peter Breitenlohner <tex-live@tug.org>
@@ -11,4 +11,4 @@ dnl Keep package and shared library versions the same;
 dnl see kpathsea/version.ac.
 dnl
 dnl This file is m4-included from configure.ac.
-m4_define([ptexenc_version], [1.4.6])
+m4_define([ptexenc_version], [1.4.6/dev])
