@@ -2,12 +2,12 @@
 shopt -s extglob
 shopt -s lastpipe
 
-VERSION="2.10"
-VDATE="2021/04/25"
+VERSION="2.11"
+VDATE="2024/03/15"
 ## see release notes at the end of this file.
 
 
-## (c) 2021/04/25 Nicolas Markey <pdfxup at markey dot fr>
+## (c) 2024/03/15 Nicolas Markey <pdfxup at markey dot fr>
 ##
 ## This work may  be distributed and/or modified under  the conditions of
 ## the LaTeX Project  Public License, either version 1.3  of this license
@@ -294,12 +294,21 @@ function testdim()
 {
     dim=$1;
     case $dim in
-	+([0-9])@(pt|in|cm|mm))
+	?(\.)+([0-9])@(pt|in|cm|mm))
 	    ;;
-	+([0-9]))
+	+([0-9])\.*([0-9])@(pt|in|cm|mm))
+	    ;;
+	?(\.)+([0-9]))
 	    dim=${dim}pt
 	    ;;
-	+([0-9])*)
+	+([0-9])\.*([0-9]))
+	    dim=${dim}pt
+	    ;;
+	?(\.)+([0-9])[!\.0-9]*)
+	    echo "   illegal unit of measure in option '$3'; ignoring";
+	    dim=$2;
+	    ;;
+	+([0-9])\.*([0-9])[!\.0-9]*)
 	    echo "   illegal unit of measure in option '$3'; ignoring";
 	    dim=$2;
 	    ;;
@@ -307,7 +316,7 @@ function testdim()
 	    echo "   not a valid dimension in option '$3'; ignoring";
 	    dim=$2;
 	    ;;
-    esac
+     esac
 }
 
 ## sets variable $in to 1 if $1 is in list of ranges $2
@@ -1620,3 +1629,7 @@ v2.10 (2021/04/25)
  - added options --col (to fill in pages vertically first) and --bal
    (to balance columns (or rows) the last page). This feature was
    requested by Philipp Killinger.
+
+v2.11 (2024/03/15)
+ - fixed a bug in testdim, which did not support fractional values
+   (bug reported by Walt Tuvell)
