@@ -1,6 +1,6 @@
 .\" Automatically generated by Pandoc
 .\"
-.TH "CWEB" "1" "Marxch 10, 2024" "Web2c @VERSION@" "General Commands Manual"
+.TH "CWEB" "1" "March 10, 2024" "Web2c @VERSION@" "General Commands Manual"
 .SH NAME
 ctangle, cweave \- translate CWEB to C/C++ and/or TeX
 .SH SYNOPSIS
