@@ -1,5 +1,5 @@
-dnl $Id: version.ac 66596 2023-03-19 22:16:03Z karl $
-dnl   Copyright 2016-2023 Karl Berry <tex-live@tug.org>
+dnl $Id: version.ac 70630 2024-03-13 22:40:16Z karl $
+dnl   Copyright 2016-2024 Karl Berry <tex-live@tug.org>
 dnl   Copyright 2010-2015 Peter Breitenlohner <tex-live@tug.org>
 dnl
 dnl   This file is free software; the copyright holder
@@ -9,4 +9,4 @@ dnl
 dnl --------------------------------------------------------
 dnl
 dnl  m4-include this file to define the current TeX Live version
-m4_define([tex_live_version], [2024])
+m4_define([tex_live_version], [2025/dev])
