@@ -1,3 +1,7 @@
+2024-03-13  Andreas Scherer  <https://ascherer.github.io>
+
+	* ctwill-mini.ch: Fix page breaks in sections 164 and 173.
+
 2024-03-10  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctwill-hint.ch,
